crates/ridge-parser/tests/fixtures/errors/p009_non_assoc_chain.rg
-- expect: P009
-- Trigger: non-associative comparison operator chained without parentheses.
fn f =
    a == b == c
